tests/snapshots/lexer_snapshots__lexer_all@tokens-22.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/language/hello.of
---
Ok(
    [
        Token {
            token_type: Import,
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: LeftBrace,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: RightBrace,
            position: 16,
            line: 1,
            column: 17,
        },
        Token {
            token_type: From,
            position: 21,
            line: 1,
            column: 22,
        },
        Token {
            token_type: StringLit(
                "of:core",
            ),
            position: 31,
            line: 1,
            column: 32,
        },
        Token {
            token_type: Semicolon,
            position: 32,
            line: 1,
            column: 33,
        },
        Token {
            token_type: Function,
            position: 42,
            line: 3,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "main",
            ),
            position: 47,
            line: 3,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 48,
            line: 3,
            column: 15,
        },
        Token {
            token_type: RightParen,
            position: 49,
            line: 3,
            column: 16,
        },
        Token {
            token_type: Colon,
            position: 50,
            line: 3,
            column: 17,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 54,
            line: 3,
            column: 21,
        },
        Token {
            token_type: LeftBrace,
            position: 56,
            line: 3,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 64,
            line: 4,
            column: 8,
        },
        Token {
            token_type: LeftParen,
            position: 65,
            line: 4,
            column: 9,
        },
        Token {
            token_type: StringLit(
                "Hello, Otter Fusion!",
            ),
            position: 87,
            line: 4,
            column: 31,
        },
        Token {
            token_type: RightParen,
            position: 88,
            line: 4,
            column: 32,
        },
        Token {
            token_type: Semicolon,
            position: 89,
            line: 4,
            column: 33,
        },
        Token {
            token_type: Var,
            position: 96,
            line: 6,
            column: 6,
        },
        Token {
            token_type: Identifier(
                "x",
            ),
            position: 98,
            line: 6,
            column: 8,
        },
        Token {
            token_type: Colon,
            position: 99,
            line: 6,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 103,
            line: 6,
            column: 13,
        },
        Token {
            token_type: Eq,
            position: 105,
            line: 6,
            column: 15,
        },
        Token {
            token_type: Int(
                "10",
            ),
            position: 108,
            line: 6,
            column: 18,
        },
        Token {
            token_type: Semicolon,
            position: 109,
            line: 6,
            column: 19,
        },
        Token {
            token_type: Var,
            position: 115,
            line: 7,
            column: 6,
        },
        Token {
            token_type: Identifier(
                "y",
            ),
            position: 117,
            line: 7,
            column: 8,
        },
        Token {
            token_type: Colon,
            position: 118,
            line: 7,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 122,
            line: 7,
            column: 13,
        },
        Token {
            token_type: Eq,
            position: 124,
            line: 7,
            column: 15,
        },
        Token {
            token_type: Int(
                "20",
            ),
            position: 127,
            line: 7,
            column: 18,
        },
        Token {
            token_type: Semicolon,
            position: 128,
            line: 7,
            column: 19,
        },
        Token {
            token_type: Var,
            position: 134,
            line: 8,
            column: 6,
        },
        Token {
            token_type: Identifier(
                "sum",
            ),
            position: 138,
            line: 8,
            column: 10,
        },
        Token {
            token_type: Eq,
            position: 140,
            line: 8,
            column: 12,
        },
        Token {
            token_type: Identifier(
                "x",
            ),
            position: 142,
            line: 8,
            column: 14,
        },
        Token {
            token_type: Plus,
            position: 144,
            line: 8,
            column: 16,
        },
        Token {
            token_type: Identifier(
                "y",
            ),
            position: 146,
            line: 8,
            column: 18,
        },
        Token {
            token_type: Semicolon,
            position: 147,
            line: 8,
            column: 19,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 155,
            line: 9,
            column: 8,
        },
        Token {
            token_type: LeftParen,
            position: 156,
            line: 9,
            column: 9,
        },
        Token {
            token_type: StringLit(
                "Sum: ",
            ),
            position: 163,
            line: 9,
            column: 16,
        },
        Token {
            token_type: Plus,
            position: 165,
            line: 9,
            column: 18,
        },
        Token {
            token_type: LeftParen,
            position: 167,
            line: 9,
            column: 20,
        },
        Token {
            token_type: Identifier(
                "sum",
            ),
            position: 170,
            line: 9,
            column: 23,
        },
        Token {
            token_type: As,
            position: 173,
            line: 9,
            column: 26,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 177,
            line: 9,
            column: 30,
        },
        Token {
            token_type: RightParen,
            position: 178,
            line: 9,
            column: 31,
        },
        Token {
            token_type: RightParen,
            position: 179,
            line: 9,
            column: 32,
        },
        Token {
            token_type: Semicolon,
            position: 180,
            line: 9,
            column: 33,
        },
        Token {
            token_type: Var,
            position: 187,
            line: 11,
            column: 6,
        },
        Token {
            token_type: Identifier(
                "name",
            ),
            position: 192,
            line: 11,
            column: 11,
        },
        Token {
            token_type: Colon,
            position: 193,
            line: 11,
            column: 12,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 197,
            line: 11,
            column: 16,
        },
        Token {
            token_type: Eq,
            position: 199,
            line: 11,
            column: 18,
        },
        Token {
            token_type: StringLit(
                "World",
            ),
            position: 207,
            line: 11,
            column: 26,
        },
        Token {
            token_type: Semicolon,
            position: 208,
            line: 11,
            column: 27,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 216,
            line: 12,
            column: 8,
        },
        Token {
            token_type: LeftParen,
            position: 217,
            line: 12,
            column: 9,
        },
        Token {
            token_type: StringLit(
                "Hello, ",
            ),
            position: 226,
            line: 12,
            column: 18,
        },
        Token {
            token_type: Plus,
            position: 228,
            line: 12,
            column: 20,
        },
        Token {
            token_type: Identifier(
                "name",
            ),
            position: 233,
            line: 12,
            column: 25,
        },
        Token {
            token_type: Plus,
            position: 235,
            line: 12,
            column: 27,
        },
        Token {
            token_type: StringLit(
                "!",
            ),
            position: 239,
            line: 12,
            column: 31,
        },
        Token {
            token_type: RightParen,
            position: 240,
            line: 12,
            column: 32,
        },
        Token {
            token_type: Semicolon,
            position: 241,
            line: 12,
            column: 33,
        },
        Token {
            token_type: Int(
                "0",
            ),
            position: 246,
            line: 14,
            column: 4,
        },
        Token {
            token_type: RightBrace,
            position: 248,
            line: 15,
            column: 2,
        },
    ],
)
