tests/snapshots/lexer_snapshots__lexer_all@tokens-23.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/language/test_list.of
---
Ok(
    [
        Token {
            token_type: Import,
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: LeftBrace,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: RightBrace,
            position: 16,
            line: 1,
            column: 17,
        },
        Token {
            token_type: From,
            position: 21,
            line: 1,
            column: 22,
        },
        Token {
            token_type: StringLit(
                "of:core",
            ),
            position: 31,
            line: 1,
            column: 32,
        },
        Token {
            token_type: Semicolon,
            position: 32,
            line: 1,
            column: 33,
        },
        Token {
            token_type: Function,
            position: 42,
            line: 3,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "main",
            ),
            position: 47,
            line: 3,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 48,
            line: 3,
            column: 15,
        },
        Token {
            token_type: RightParen,
            position: 49,
            line: 3,
            column: 16,
        },
        Token {
            token_type: Colon,
            position: 50,
            line: 3,
            column: 17,
        },
        Token {
            token_type: Identifier(
                "i32",
            ),
            position: 54,
            line: 3,
            column: 21,
        },
        Token {
            token_type: LeftBrace,
            position: 56,
            line: 3,
            column: 23,
        },
        Token {
            token_type: Var,
            position: 64,
            line: 4,
            column: 8,
        },
        Token {
            token_type: Identifier(
                "l",
            ),
            position: 66,
            line: 4,
            column: 10,
        },
        Token {
            token_type: Eq,
            position: 68,
            line: 4,
            column: 12,
        },
        Token {
            token_type: LeftBracket,
            position: 70,
            line: 4,
            column: 14,
        },
        Token {
            token_type: Int(
                "5",
            ),
            position: 71,
            line: 4,
            column: 15,
        },
        Token {
            token_type: RightBracket,
            position: 72,
            line: 4,
            column: 16,
        },
        Token {
            token_type: Semicolon,
            position: 73,
            line: 4,
            column: 17,
        },
        Token {
            token_type: Identifier(
                "l",
            ),
            position: 79,
            line: 5,
            column: 6,
        },
        Token {
            token_type: Dot,
            position: 80,
            line: 5,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "push",
            ),
            position: 84,
            line: 5,
            column: 11,
        },
        Token {
            token_type: LeftParen,
            position: 85,
            line: 5,
            column: 12,
        },
        Token {
            token_type: Int(
                "10",
            ),
            position: 87,
            line: 5,
            column: 14,
        },
        Token {
            token_type: RightParen,
            position: 88,
            line: 5,
            column: 15,
        },
        Token {
            token_type: Semicolon,
            position: 89,
            line: 5,
            column: 16,
        },
        Token {
            token_type: Return,
            position: 100,
            line: 6,
            column: 11,
        },
        Token {
            token_type: Identifier(
                "l",
            ),
            position: 102,
            line: 6,
            column: 13,
        },
        Token {
            token_type: Dot,
            position: 103,
            line: 6,
            column: 14,
        },
        Token {
            token_type: Identifier(
                "get",
            ),
            position: 106,
            line: 6,
            column: 17,
        },
        Token {
            token_type: LeftParen,
            position: 107,
            line: 6,
            column: 18,
        },
        Token {
            token_type: Int(
                "1",
            ),
            position: 108,
            line: 6,
            column: 19,
        },
        Token {
            token_type: RightParen,
            position: 109,
            line: 6,
            column: 20,
        },
        Token {
            token_type: As,
            position: 112,
            line: 6,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "i32",
            ),
            position: 116,
            line: 6,
            column: 27,
        },
        Token {
            token_type: Semicolon,
            position: 117,
            line: 6,
            column: 28,
        },
        Token {
            token_type: RightBrace,
            position: 119,
            line: 7,
            column: 2,
        },
    ],
)
