tests/snapshots/lexer_snapshots__lexer_all@tokens-24.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/lexer/comment_at_end_of_input_results_in_eof.of
---
Ok(
    [
        Token {
            token_type: Comment(
                " comment",
            ),
            position: 10,
            line: 1,
            column: 11,
        },
    ],
)
