tests/snapshots/lexer_snapshots__lexer_all@tokens-25.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/lexer/comment_then_identifier_on_later_line_has_correct_line.of
---
Ok(
    [
        Token {
            token_type: Comment(
                " first line",
            ),
            position: 13,
            line: 1,
            column: 14,
        },
        Token {
            token_type: Identifier(
                "bar",
            ),
            position: 17,
            line: 2,
            column: 4,
        },
    ],
)
