tests/snapshots/lexer_snapshots__lexer_all@tokens-27.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/lexer/double_ampersand_is_and_token.of
---
Ok(
    [
        Token {
            token_type: And,
            position: 2,
            line: 1,
            column: 3,
        },
    ],
)
