tests/snapshots/lexer_snapshots__lexer_all@tokens-29.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/lexer/escaped_backslash_is_kept_inside_string.of
---
Ok(
    [
        Token {
            token_type: StringLit(
                "a\\b",
            ),
            position: 6,
            line: 1,
            column: 7,
        },
    ],
)
