tests/snapshots/lexer_snapshots__lexer_all@tokens-31.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/lexer/identifier_is_scanned.of
---
Ok(
    [
        Token {
            token_type: Identifier(
                "hello",
            ),
            position: 5,
            line: 1,
            column: 6,
        },
    ],
)
