tests/snapshots/lexer_snapshots__lexer_all@tokens-33.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/lexer/keywords_are_recognized.of
---
Ok(
    [
        Token {
            token_type: Struct,
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: Function,
            position: 15,
            line: 1,
            column: 16,
        },
        Token {
            token_type: For,
            position: 19,
            line: 1,
            column: 20,
        },
        Token {
            token_type: While,
            position: 25,
            line: 1,
            column: 26,
        },
        Token {
            token_type: Null,
            position: 30,
            line: 1,
            column: 31,
        },
        Token {
            token_type: True,
            position: 35,
            line: 1,
            column: 36,
        },
        Token {
            token_type: False,
            position: 41,
            line: 1,
            column: 42,
        },
        Token {
            token_type: Var,
            position: 45,
            line: 1,
            column: 46,
        },
        Token {
            token_type: Extend,
            position: 52,
            line: 1,
            column: 53,
        },
        Token {
            token_type: Return,
            position: 59,
            line: 1,
            column: 60,
        },
        Token {
            token_type: Interface,
            position: 69,
            line: 1,
            column: 70,
        },
    ],
)
