tests/snapshots/lexer_snapshots__lexer_all@tokens-34.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/lexer/mixed_sequence_of_tokens_is_scanned_in_order.of
---
Ok(
    [
        Token {
            token_type: Var,
            position: 3,
            line: 1,
            column: 4,
        },
        Token {
            token_type: Identifier(
                "foo",
            ),
            position: 7,
            line: 1,
            column: 8,
        },
        Token {
            token_type: Eq,
            position: 9,
            line: 1,
            column: 10,
        },
        Token {
            token_type: StringLit(
                "bar",
            ),
            position: 15,
            line: 1,
            column: 16,
        },
        Token {
            token_type: Semicolon,
            position: 16,
            line: 1,
            column: 17,
        },
    ],
)
